@@ -1,3 +1,7 @@
+2007-07-01  Thatcher Ulrich <tu@tulrich.com>
+	* Makefile: initial rule for win32_dependencies.zip.  Needs to be
+	tested, also add freetype, etc.
+
 2007-07-01  Vitaly Alexeev <tishka92@yahoo.com>
 
 	Snapshot of movieclip of any nesting level is done properly
